Fix bad spacing in topic title on monobook
Best practices[1] encourage using unitless line height, specifying line-height
with em's inherits differently causing rendering errors such as the topic title
in monobook.  I reviewed all the places these are used in both monobook and
vector.  There are some tiny changes in line height removing the em's but it
generally looks the same.

Note that some of these locations arn't actually used. nvagiation.less is
unreferenced from the templates.  forms.less has a few line-height definitions,
but only the first for .mw-ui-input-large is used(for the nojs new topic link).
The others are referenced from form_element.handlebars but that template is
never called either.

[1] https://developer.mozilla.org/en-US/docs/Web/CSS/line-height#Prefer_unitless_numbers_for_line-height_values

--- a/modules/styles/board/terms-of-use.less
+++ b/modules/styles/board/terms-of-use.less
@@ -10,6 +10,6 @@
 	height: 3.6em;
 	vertical-align: middle;
 	color: @colorTextLight;
-  font-size: .75em;
-	line-height: 1.5em;
+	font-size: .75em;
+	line-height: 1.4;
 }
