--- a/modules/styles/board/topic/navigation.less
+++ b/modules/styles/board/topic/navigation.less
@@ -14,7 +14,7 @@
 		float: right;
 		border-radius: 3px;
 		font-size: .875em;
-		line-height: 1.1em;
+		line-height: 1.1;
 
 		h5 {
 			color: @colorText;
