--- a/modules/styles/board/topic/post.less
+++ b/modules/styles/board/topic/post.less
@@ -105,7 +105,7 @@ form.flow-post {
 	// Author link in post
 	.flow-author {
 		font-size: .875em;
-		line-height: 1.2em;
+		line-height: 1.2;
 		display: inline-block;
 		color: @colorText;
 		word-wrap: break-word;
